# bleekWare

./: API-Documentation.md  API_Documentation.md  LICENSE  README.md  pyproject.toml
Example/: android_ble_scanner.py
bleekWare/: Client.py  Scanner.py  __init__.py
