[project]
name = "bleekWare"
version = "0.3.1"
authors = [
  { name="Markus Piotrowski", email="author@example.com" },
]
description = "A limited Bleak complement for accessing Bluetooth LE on Android in Python apps made with BeeWare"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[tool.setuptools]
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
include = ["bleekWare*"]
exclude = ["Example*"]

[project.urls]
Homepage = "https://github.com/MarkusPiotrowski/bleekWare"
Issues = "https://github.com/MarkusPiotrowski/bleekWare/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"